[Add] Get endpoint - dummy
