# cmd/app/main.go
@@ -8,11 +8,32 @@ import (
 	"github.com/swaggo/gin-swagger"
 
 	docs "github.com/cdlavacudeg/go-goal-planer/docs"
+	"github.com/cdlavacudeg/go-goal-planer/internal/handlers"
 )
 
+// @title Goal planer api
+// @version 1.0
+// @description This is a rest api for goal plannig
 // @BasePath /api/v1
+func main() {
+	r := gin.Default()
+	docs.SwaggerInfo.BasePath = "/api/v1"
+	v1 := r.Group("/api/v1")
+	{
+		eg := v1.Group("/example")
+		{
+			eg.GET("/helloworld", Helloworld)
+		}
+		users := v1.Group("/users")
+		{
+			users.GET("", handlers.GetUsers)
+		}
+	}
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.Run(":8080")
+}
 
-// PingExample godoc
+// Helloworld godoc
 // @Summary ping example
 // @Schemes
 // @Description do ping
@@ -23,18 +44,4 @@ import (
 // @Router /example/helloworld [get]
 func Helloworld(g *gin.Context) {
 	g.JSON(http.StatusOK, "Hello World!")
-}
-
-func main() {
-	r := gin.Default()
-	docs.SwaggerInfo.BasePath = "/api/v1"
-	v1 := r.Group("/api/v1")
-	{
-		eg := v1.Group("/example")
-		{
-			eg.GET("/helloworld", Helloworld)
-		}
-	}
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	r.Run(":8080")
 }
